[gd_scene load_steps=5 format=3 uid="uid://joeur5hoiann"]

[ext_resource type="Script" path="res://Michael WIP/Scenes/HeroSpawner.gd" id="1_c4jvp"]
[ext_resource type="Script" path="res://Michael WIP/Scripts/SlideInUI.gd" id="2_kcx55"]
[ext_resource type="PackedScene" uid="uid://broi4uqvo8xf2" path="res://Michael WIP/GoodScenes/Hero_Panel_Random.tscn" id="3_8f2bs"]
[ext_resource type="Texture2D" uid="uid://kjhjksp483uo" path="res://Michael WIP/MikeCrushSheet.png" id="6_rq2m3"]

[node name="LevelReadyUI" type="Node2D"]

[node name="PartyManager" type="Node" parent="." node_paths=PackedStringArray("spawnPositions", "partyPanels")]
script = ExtResource("1_c4jvp")
spawnPositions = [NodePath("SpawnPositions/SpawnPosition1"), NodePath("SpawnPositions/SpawnPosition2"), NodePath("SpawnPositions/SpawnPosition3")]
partyPanels = [NodePath("../PartyBattleUI/PartyInBattleUI/HeroSlot1"), NodePath("../PartyBattleUI/PartyInBattleUI/HeroSlot2"), NodePath("../PartyBattleUI/PartyInBattleUI/HeroSlot3")]

[node name="Party" type="Node2D" parent="PartyManager"]

[node name="SpawnPositions" type="Node2D" parent="PartyManager"]

[node name="SpawnPosition1" type="Node2D" parent="PartyManager/SpawnPositions"]
position = Vector2(36, 32)

[node name="SpawnPosition2" type="Node2D" parent="PartyManager/SpawnPositions"]
position = Vector2(36, 93)

[node name="SpawnPosition3" type="Node2D" parent="PartyManager/SpawnPositions"]
position = Vector2(36, 155)

[node name="PartyRosterUI" type="Control" parent="." node_paths=PackedStringArray("SlidingUI")]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 200.0
offset_right = 479.0
offset_bottom = 272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_kcx55")
SlidingUI = NodePath("RosterUI")
Automatic = true

[node name="RosterUI" type="NinePatchRect" parent="PartyRosterUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_rq2m3")
region_rect = Rect2(70, 68, 54, 54)
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="NewHeroContainer" type="GridContainer" parent="PartyRosterUI/RosterUI"]
custom_minimum_size = Vector2(72, 0)
layout_direction = 2
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 36.0
offset_right = 472.0
offset_bottom = 52.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/h_separation = 50
columns = 9

[node name="HeroPanelRandom" parent="PartyRosterUI/RosterUI/NewHeroContainer" instance=ExtResource("3_8f2bs")]
layout_mode = 2

[node name="HeroPanelRandom2" parent="PartyRosterUI/RosterUI/NewHeroContainer" instance=ExtResource("3_8f2bs")]
layout_mode = 2

[node name="HeroPanelRandom3" parent="PartyRosterUI/RosterUI/NewHeroContainer" instance=ExtResource("3_8f2bs")]
layout_mode = 2

[node name="HeroPanelRandom4" parent="PartyRosterUI/RosterUI/NewHeroContainer" instance=ExtResource("3_8f2bs")]
layout_mode = 2

[node name="HeroPanelRandom5" parent="PartyRosterUI/RosterUI/NewHeroContainer" instance=ExtResource("3_8f2bs")]
layout_mode = 2

[node name="PartyBattleUI" type="Control" parent="." node_paths=PackedStringArray("SlidingUI")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_kcx55")
SlidingUI = NodePath("PartyInBattleUI")

[node name="StartButtonButton" type="Button" parent="PartyBattleUI"]
layout_mode = 0
offset_left = 86.0
offset_top = 131.0
offset_right = 132.0
offset_bottom = 162.0
text = "Start"
icon_alignment = 1
expand_icon = true

[node name="PartyInBattleUI" type="Control" parent="PartyBattleUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HeroSlot1" parent="PartyBattleUI/PartyInBattleUI" instance=ExtResource("3_8f2bs")]
offset_left = 36.0
offset_top = 32.0
offset_right = 36.0
offset_bottom = 32.0

[node name="HeroSlot2" parent="PartyBattleUI/PartyInBattleUI" instance=ExtResource("3_8f2bs")]
offset_left = 36.0
offset_top = 93.0
offset_right = 36.0
offset_bottom = 93.0

[node name="HeroSlot3" parent="PartyBattleUI/PartyInBattleUI" instance=ExtResource("3_8f2bs")]
offset_left = 36.0
offset_top = 155.0
offset_right = 36.0
offset_bottom = 155.0

[node name="PartyAddUI" type="Control" parent="." node_paths=PackedStringArray("SlidingUI")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_kcx55")
SlidingUI = NodePath("../PartyBattleUI/PartyInBattleUI")
Automatic = true

[node name="SkipButton" type="Button" parent="PartyAddUI"]
layout_mode = 0
offset_left = 421.0
offset_top = 162.0
offset_right = 467.0
offset_bottom = 193.0
text = "Done"
icon_alignment = 1
expand_icon = true

[node name="AddNewPartyMember" type="Label" parent="PartyAddUI"]
layout_mode = 0
offset_left = 132.0
offset_right = 346.0
offset_bottom = 69.0
text = "ADD NEW PARTY MEMBER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeroAddUI" type="Control" parent="PartyAddUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HeroSlot1" parent="PartyAddUI/HeroAddUI" instance=ExtResource("3_8f2bs")]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 53.0
offset_right = 96.0
offset_bottom = 53.0
grow_horizontal = 0
grow_vertical = 0
StartWithRandomHero = true

[node name="HeroSlot2" parent="PartyAddUI/HeroAddUI" instance=ExtResource("3_8f2bs")]
offset_left = 236.0
offset_top = 93.0
offset_right = 236.0
offset_bottom = 93.0
StartWithRandomHero = true

[node name="HeroSlot3" parent="PartyAddUI/HeroAddUI" instance=ExtResource("3_8f2bs")]
offset_left = 346.0
offset_top = 93.0
offset_right = 346.0
offset_bottom = 93.0
StartWithRandomHero = true

[connection signal="move_To_Ready_Screen" from="PartyManager" to="PartyBattleUI" method="slide_in"]
[connection signal="move_To_Ready_Screen" from="PartyManager" to="PartyAddUI" method="slide_out"]
[connection signal="onEmptyHeroPanelFilled" from="PartyRosterUI/RosterUI/NewHeroContainer/HeroPanelRandom" to="PartyManager" method="_FinishPartyAddition"]
[connection signal="onEmptyHeroPanelFilled" from="PartyRosterUI/RosterUI/NewHeroContainer/HeroPanelRandom2" to="PartyManager" method="_FinishPartyAddition"]
[connection signal="onEmptyHeroPanelFilled" from="PartyRosterUI/RosterUI/NewHeroContainer/HeroPanelRandom3" to="PartyManager" method="_FinishPartyAddition"]
[connection signal="onEmptyHeroPanelFilled" from="PartyRosterUI/RosterUI/NewHeroContainer/HeroPanelRandom4" to="PartyManager" method="_FinishPartyAddition"]
[connection signal="onEmptyHeroPanelFilled" from="PartyRosterUI/RosterUI/NewHeroContainer/HeroPanelRandom5" to="PartyManager" method="_FinishPartyAddition"]
[connection signal="pressed" from="PartyBattleUI/StartButtonButton" to="PartyManager" method="_LoadHeros"]
[connection signal="pressed" from="PartyBattleUI/StartButtonButton" to="PartyRosterUI" method="slide_out"]
[connection signal="pressed" from="PartyBattleUI/StartButtonButton" to="PartyBattleUI" method="slide_out"]
